--- a/Vitkund/Views/Shared/_Layout.cshtml
+++ b/Vitkund/Views/Shared/_Layout.cshtml
@@ -673,6 +673,9 @@
                                     <li>
                                         <a href="contact-us">Contact Us</a>
                                     </li>
+                                    <li>
+                                        <a href="Trending-Business">Tranding Business</a>
+                                    </li>
 
                                     <li>
                                         <a href="/business-ideas">Business Ideas</a>
@@ -680,9 +683,7 @@
                                     <li>
                                         <a href="gallery">Gallery</a>
                                     </li>
-                                    <li>
-                                        <a href="motivational-quotes">Motivational Quotes</a>
-                                    </li>
+
                                     <li>
                                         <a href="motivational-story">Motivational Story</a>
                                     </li>
